<resources>
    <string name="app_name">7MinutesWorkoutApp</string>
    <string name="start">START</string>
    <string name="start_image">start Image</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="jumping_jacks">jumping jacks</string>
    <string name="finish">FINISH</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="end">END</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="quit_message">This will stop your workout. You\'ve come this far,\n are you sure you want to quit?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="bmi_text">BMI</string>
    <string name="calculator">Calculator</string>


</resources>