<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FinishActivity"
    android:background="@drawable/ic_bg"
>

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_textView_text_size"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/default_textView_text_size"
        android:gravity="center"
        android:text="@string/end"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/flDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <FrameLayout
        android:id="@+id/flDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/item_circular_color_white_border"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnd"
    />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_textView_text_size"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/congratulations"

        app:layout_constraintTop_toBottomOf="@id/flDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_textView_text_size"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/you_have_done_the_workout"

        app:layout_constraintTop_toBottomOf="@id/congrats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/tvFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/default_textView_text_size"
        android:textStyle="bold"
        android:textSize="22sp"
        android:padding="8dp"
        android:background="@drawable/item_rectangle_color_white_border"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"

    />



</androidx.constraintlayout.widget.ConstraintLayout>