<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".MainActivity">
    
    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="match_parent"
        android:src="@drawable/img_main_page"
        android:layout_height="220dp"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/start_image"
        app:layout_constraintBottom_toTopOf="@+id/flStart"/>

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:background="@drawable/item_color_accent_border_ripple_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:background="@drawable/item_circular_color_accent_background"
        app:layout_constraintTop_toBottomOf="@id/flStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flHistory">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_text"
            android:layout_gravity="center"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </FrameLayout>

    <TextView
        android:id="@+id/tvBmiCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:layout_gravity="center"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"

        app:layout_constraintTop_toBottomOf="@id/flBMI"
        app:layout_constraintStart_toStartOf="@id/flBMI"
        app:layout_constraintEnd_toEndOf="@id/flBMI"

    />


    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_gravity="center"
        android:background="@drawable/item_circular_color_accent_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toEndOf="@id/flBMI"
        app:layout_constraintTop_toBottomOf="@id/flStart"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_calendar_month_24"
            android:textColor="@color/white"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="History"
        android:layout_gravity="center"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"

        app:layout_constraintTop_toBottomOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="@id/flHistory"
        app:layout_constraintEnd_toEndOf="@id/flHistory"
    />


</androidx.constraintlayout.widget.ConstraintLayout>
